After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 784041 - baseparse: sinkcaps can be NULL in default caps negotiation
baseparse: sinkcaps can be NULL in default caps negotiation
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
unspecified
Other All
: Normal normal
: 1.12.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-06-21 14:50 UTC by Nicolas Dufresne (ndufresne)
Modified: 2017-07-03 20:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
baseparse: sinkcaps can be NULL in default caps negotiation (974 bytes, patch)
2017-06-21 14:50 UTC, Nicolas Dufresne (ndufresne)
committed Details | Review

Description Nicolas Dufresne (ndufresne) 2017-06-21 14:50:23 UTC
See commit message.
Comment 1 Nicolas Dufresne (ndufresne) 2017-06-21 14:50:26 UTC
Created attachment 354161 [details] [review]
baseparse: sinkcaps can be NULL in default caps negotiation

This was causing harmless assertion about the unreffed caps not being of
type caps.
Comment 2 Olivier Crête 2017-06-22 00:48:39 UTC
Review of attachment 354161 [details] [review]:

Looks good
Comment 3 Nicolas Dufresne (ndufresne) 2017-06-22 20:01:24 UTC
Attachment 354161 [details] pushed as 632952b - baseparse: sinkcaps can be NULL in default caps negotiation