baseparse: sinkcaps can be NULL in default caps negotiation

This was causing harmless assertion about the unreffed caps not being of
type caps.

https://bugzilla.gnome.org/show_bug.cgi?id=784041